5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1679_1879.log
== TEST (2019-04-30 13:14:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O número de horas extras:"))
F=float(input("O número de horas que o funcionário faltou:"))

H=E-(1/4*F)
print(H)
-- OUTPUT:
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:14:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O nUmero de horas extras:"))
F=float(input("O nUmero de horas que o funcionArio faltou:"))

H=E-(1/4*F)
print(H)
-- OUTPUT:
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:17:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O nUmero de horas extras:"))
F=float(input("O nUmero de horas que o funcionArio faltou:"))

H=E-(1/4*F)
h=H*100
print(H)
if(H>400):
	print(E,"extras e", F, "de falta")
	print("R$", h)
else:
	print(E,"extras e", F, "de falta")
	print("R$", h)
-- OUTPUT:
415.0
420.0 extras e 20.0 de falta
R$ 41500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:18:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O nUmero de horas extras:"))
F=float(input("O nUmero de horas que o funcionArio faltou:"))

H=E-(1/4*F)
h=H*100
print(H)
if(H>400):
	print(E,"extras e", F, "de falta")
	print("R$", h)
else:
	print(E,"extras e", F, "de falta")
	print("R$", h)
-- EXECUTION TIME:
0.21956
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415.0
420.0 extras e 20.0 de falta
R$ 41500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
375.5
400.5 extras e 100.0 de falta
R$ 37550.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289.0
300.0 extras e 44.0 de falta
R$ 28900.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:21:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O nUmero de horas extras:"))
F=float(input("O nUmero de horas que o funcionArio faltou:"))

H=E-(1/4*F)
print(H)
h=H*100
print(H)
if(H>400):
	

else:

-- ERROR:
File "XXXX", line 12
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:21:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O nUmero de horas extras:"))
F=float(input("O nUmero de horas que o funcionArio faltou:"))

H=E-(1/4*F)
print(H)
h=H*100
print(H)


-- OUTPUT:
415.0
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:21:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O nUmero de horas extras:"))
F=float(input("O nUmero de horas que o funcionArio faltou:"))

H=E-(1/4*F)
print(H)
h=H*100
print(h)


-- OUTPUT:
415.0
41500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:21:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O nUmero de horas extras:"))
F=float(input("O nUmero de horas que o funcionArio faltou:"))

H=E-(1/4*F)
print(H)
h=H*40
print(h)


-- OUTPUT:
415.0
16600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:24:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O nUmero de horas extras:"))
F=float(input("O nUmero de horas que o funcionArio faltou:"))

H=E-1/4*F
print(H)
h=H*40
print(h)


-- OUTPUT:
415.0
16600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:27:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E-1/4*F
print(H)
h=H*40
print(h)
if(h>400):
	G=500
	print(E, "extras e", F, "de falta")

-- OUTPUT:
415.0
16600.0
420.0 extras e 20.0 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:27:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E-1/4*F
print(H)
h=H*40
print(h)
if(h>400):
	G=500
	print(E, "extras e", F, "de falta")
	print("R$", G)
else:
	G=500
	print(E, "extras e", F, "de falta")
	print("R$", G)
-- OUTPUT:
415.0
16600.0
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:28:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E-1/4*F
print(H)
h=H*40
print(h)
if(h>400):
	G=500
	print(E, "extras e", F, "de falta")
	print("R$", G)
else:
	G=100
	print(E, "extras e", F, "de falta")
	print("R$", G)
-- OUTPUT:
415.0
16600.0
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:28:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E-1/4*F
print(H)
h=H*40
print(h)
if(h>400):
	G=500
	print(E, "extras e", F, "de falta")
	print("R$", G)
else:
	G=100
	print(E, "extras e", F, "de falta")
	print("R$", G)
-- EXECUTION TIME:
0.132468
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415.0
16600.0
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
375.5
15020.0
400.5 extras e 100.0 de falta
R$ 500
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289.0
11560.0
300.0 extras e 44.0 de falta
R$ 500
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:29:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E-1/4*F
print(H)
h=H*40
print(h)
if(h>400):
	G=500
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- EXECUTION TIME:
0.257156
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415.0
16600.0
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
375.5
15020.0
400.5 extras e 100.0 de falta
R$ 500
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289.0
11560.0
300.0 extras e 44.0 de falta
R$ 500
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:29:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E-1/4*F
print(H)
h=H*40
print(h)
if(h>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
415.0
16600.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:29:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E-1/4*F
print(H)
h=H*40
print(h)
if(h>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- EXECUTION TIME:
0.155476
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415.0
16600.0
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
375.5
15020.0
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289.0
11560.0
300.0 extras e 44.0 de falta
R$ 500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:35:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E*100-1/4*F
print(H)
if(h>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(h>400):
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:35:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=E*100-1/4*F
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
41995.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:36:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=(E*100)-(1/4*F)
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
41995.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:36:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=(E*100)-(1/4*F)
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
41995.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:36:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=(E*(1/4*F)
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- ERROR:
File "XXXX", line 6
    print(H)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:36:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=(E*(1/4*F))
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
2100.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:38:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=(E*(1/4*F))
print(H)
if(H>40):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
2100.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:38:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=(E-(1/4*F))
print(H)
if(H>40):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
415.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:38:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))

H=(E-(1/4*F))
print(H)
if(H>40):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- EXECUTION TIME:
0.159392
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415.0
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
375.5
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289.0
300.0 extras e 44.0 de falta
R$ 500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:40:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=(E*(E*F))
print(H)
if(H>40):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
3528000.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:50:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- EXECUTION TIME:
0.204726
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415.0
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
375.5
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289.0
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:50:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
415.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:50:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:51:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:51:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:51:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:51:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
if(H>40):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:51:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
if(H>40):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- EXECUTION TIME:
0.147082
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:52:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*10
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:52:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*10
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- EXECUTION TIME:
0.138869
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 14:01:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=F-0.25*E
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- OUTPUT:
-85.0
420.0 extras e 20.0 de falta
R$ 100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 14:01:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=F-0.25*E
print(H)
if(H>400):
	G=500.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
else:
	G=100.00
	print(E, "extras e", F, "de falta")
	print("R$", round(G,2))
-- EXECUTION TIME:
0.128712
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
-85.0
420.0 extras e 20.0 de falta
R$ 100.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
-0.125
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
-31.0
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 14:03:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
print(H)
if(H>=0):
	if(H>400):
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- OUTPUT:
415.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 14:03:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
print(H)
if(H>=0):
	if(H>400):
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- OUTPUT:
415.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 14:03:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H=E-0.25*F
print(H)
if(H>=0):
	if(H>400):
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.190003
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415.0
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
375.5
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289.0
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 14:14:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*40
print(H)
if(H>=0):
	if(H>400):
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- OUTPUT:
16600.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 14:15:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*40
print(H)
if(H>=0):
	if(H>400):
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- OUTPUT:
16600.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 14:15:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*40
print(H)
if(H>=0):
	if(H>400):
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.282811
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
16600.0
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
15020.0
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
11560.0
300.0 extras e 44.0 de falta
R$ 500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 14:15:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*40
print(H)
if(H>=0):
	if(H<=400):
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- OUTPUT:
16600.0
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 14:16:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*40

if(H>=0):
	if(H<=400):
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 14:16:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*40

if(H>=0):
	if(H<=400):
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.130096
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 14:16:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*25

if(H>=0):
	if(H<=400):
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 14:16:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("O numero de horas extras:"))
F=float(input("O numero de horas que o funcionario faltou:"))
H1=E-0.25*F
H=H1*25

if(H>=0):
	if(H<=400):
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.217791
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 14:19:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("NUMERO DE HORAS EXTRAS:"))
F=float(input("NUMERO DE HORAS NAO TRABALHADAS:"))
H1=E-1/4*F
H=H1*40

if(H>=0):
	if(H<=400):
		G=100.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
	else:
		G=500.00
		print(E, "extras e", F, "de falta")
		print("R$", round(G,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.158925
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:24:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("NUMERO DE HORAS EXTRAS:"))
F=float(input("NUMERO DE HORAS NAO TRABALHADAS:"))
H=E-1/4*F

if(H>=0):
	if(H<=400):
		
		print(E, "extras e", F, "de falta")
		print("R$", round(100.00,2))
	else:
		
		print(E, "extras e", F, "de falta")
		print("R$", round(500.00,2))
else:
	print("entrada invalida")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:24:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E=float(input("NUMERO DE HORAS EXTRAS:"))
F=float(input("NUMERO DE HORAS NAO TRABALHADAS:"))
H=E-1/4*F

if(H>=0):
	if(H<=400):
		
		print(E, "extras e", F, "de falta")
		print("R$", round(100.00,2))
	else:
		
		print(E, "extras e", F, "de falta")
		print("R$", round(500.00,2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.139347
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
